fix scrollbars

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,10 @@
 /* FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
+
+
 /* GLOBAL ELEMENTS */
+
 * {
     box-sizing: border-box;
     outline: none;
@@ -29,6 +32,24 @@ body {
     height: 100vh;
 }
 
+/* LINKS */
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* SCROLLBARS */
+::-webkit-scrollbar {
+    width: 4px;
+    border-radius: 10px;
+}
+   
+::-webkit-scrollbar-thumb {
+    background: white;
+    border-radius: 10px;
+}
+
 /* BACKGROUND */
 
 .video-bg {
@@ -51,6 +72,7 @@ body {
 
 
 /* APP SECTION*/
+
 .app {
     display: flex;
     flex-direction: column;
@@ -66,11 +88,6 @@ body {
     box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 0.3);
 }
 
-/* LINKS */
-a {
-    text-decoration: none;
-    color: inherit;
-}
 
 /* APP HEADER */
 .header {
@@ -101,40 +118,46 @@ a {
 }
 
 
+/* BACKGROUND BLOCK FOR LEFT MENU AND MAIN */
+
 .wrapper {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    overflow: hidden;
 }
+
+/* LEFT MENU */
 
 .left-nav {
     display: flex;
     align-items: flex-start;
+    flex-direction: column;
     width: 20%;
     height: 100%;
     background: rgba(255, 255, 255, .25);
     -webkit-backdrop-filter: blur(10px);
 	backdrop-filter: blur(10px);
     overflow: auto;
+    scroll-behavior: smooth;
     flex-wrap: nowrap;
+    color: rgba(0, 0, 0, .8);
+    scrollbar-color: white white;
 }
+
+
+/* LEFT WRAPPERS */
 
 .left-wrapper {
     margin: 0 auto;
     height: 100%;
     width: 80%;
     padding-bottom: 1em;
-}
-
-.left-wrapper > div {
     margin-top: 2em;
 }
 
-.today {
-    width: 100%;
-}
 
 .left-header {
     font-weight: bold;
